<resources>
    <string name="app_name">IIITD Library</string>
    <string name="splash_screen_startup_duration">3000</string>
    <string name="splash_screen_sleep_duration">5000</string>
    <string name="splash_screen_library_heading">Library</string>
    <string name="splash_screen_loading">Loading...</string>
    <string name="nav_drawer_About_title">About</string>
    <string name="nav_drawer_resources_title">Resources</string>
    <string name="nav_drawer_services_title">Services</string>
    <string name="nav_drawer_occupancy_title">Occupancy</string>
    <string name="nav_drawer_giving_title">Giving</string>
    <string name="nav_drawer_header_library_title">Library</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="bottom_nav_bar_title_home">Home</string>
    <string name="bottom_nav_bar_title_search">Search</string>
    <string name="bottom_nav_bar_title_login">Login</string>
    <string name="bottom_nav_bar_title_profile">Profile</string>
    <string name="progress_dialog_text">Processing...</string>
    <string name="alert_dialog_cant_connect_text_view_title_db">Can\'t connect to the Database; Make sure you are connected to the Internet.</string>
    <string name="alert_dialog_retry_title">Retry</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="login_fragment_title">Login</string>
    <string name="command_isbn_from_biblio">select isbn from biblioitems where biblionumber=</string>
    <string name="command_recent_books">select isbn, biblionumber from biblioitems where isbn>999999999
        order by timestamp limit</string>
    <string name="image_fetcher_api">https://www.googleapis.com/books/v1/volumes?country=IN&amp;key=AIzaSyDHlwmWnQVDDh-QVDE19aIu0WK7UEU7HWc&amp;q=isbn:</string>
    <string name="please_wait">Please wait</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="results">Results</string>
    <string name="no_results">No Results Found!</string>
    <string name="not_available">Not Available</string>
    <string name="home_fragment_title">Home</string>
    <string name="home_fragment_new_arrivals_title">New Arrivals</string>
    <string name="home_fragment_e_resources_title">E Resources</string>
    <string name="home_fragment_total_new_arrivals">10</string>
    <string name="home_fragment_total_e_resources">16</string>
    <string name="e_resource_url_acm">https://dl.acm.org/</string>
    <string name="e_resource_url_acs">https://www.acs.org/content/acs/en.html</string>
    <string name="e_resource_url_elsevier">https://www.sciencedirect.com/</string>
    <string name="e_resource_url_epw">http://www.epw.in/frontpage?0=ip_login_no_cache%3Dd94336b76282d826ae6e4eca56f7bf3d</string>
    <string name="e_resource_url_ieee">http://ieeexplore.ieee.org/Xplore/home.jsp</string>
    <string name="e_resource_url_jstor">http://www.jstor.org/</string>
    <string name="e_resource_url_nature">https://www.nature.com/nature/</string>
    <string name="e_resource_url_now">https://www.nowpublishers.com/</string>
    <string name="e_resource_url_saa">http://www.southasiaarchive.com/</string>
    <string name="e_resource_url_siam">https://www.siam.org/journals/</string>
    <string name="e_resource_url_springer_cse">https://link.springer.com/bookseries/558</string>
    <string name="e_resource_url_springer_link">https://link.springer.com/</string>
    <string name="e_resource_url_tfo">https://www.tandfonline.com/</string>
    <string name="e_resource_url_urkund">http://www.urkund.com/en</string>
    <string name="e_resource_url_wbl">http://community.worldlibrary.in/?AffiliateKey=NDL-JS1245</string>
    <string name="e_resource_url_wbw">http://onlinelibrary.wiley.com/browse/publications?type=journal&amp;activeLetter=</string>
    <string name="about_fragment_title">About</string>
    <string name="about_fragment_brief_heading">Brief</string>
    <string name="about_fragment_brief">The Library and Information Center of the Institute is housed in a separate building in its Campus. The Library is fully automated using RFID Technology with EM Security System.</string>
    <string name="about_fragment_timings_heading">Timings</string>
    <string name="about_fragment_mon_to_fri_normal_days">Monday to Friday during normal days</string>
    <string name="about_fragment_library_opening_hours_heading">Opening Hours</string>
    <string name="about_fragment_library_opening_hours">8:30 AM to 12:00 Mid Night</string>
    <string name="about_fragment_issue_return_heading">Issue/Return Hours</string>
    <string name="about_fragment_issue_return_timing">9:00 AM to 9:00 PM</string>
    <string name="about_fragment_saturday_normal_days_heading">Saturday during normal days</string>
    <string name="about_fragment_saturday_normal_days_opening_hours">8:30 AM to 6:00 PM</string>
    <string name="about_fragment_saturday_normal_days_issue_return_hours">9:00 AM to 5:45 PM</string>
    <string name="about_fragment_mon_to_sun_during_exams_heading">Mon-Sun during 3 days before Mid-Sem/End-Sem Exams till it\'s completion</string>
    <string name="about_fragment_mon_to_sun_during_exams_opening_hours">8:30 AM to 2:00 AM</string>
    <string name="about_fragment_mon_to_sun_during_exams_issue_return_hours">9:00 AM to 9:00 PM</string>
    <string name="about_fragment_mon_to_sat_during_semester_break_mid_recess_public_holidays_heading">Mon-Sat during Semester Break, Mid recess, Public Holidays</string>
    <string name="about_fragment_mon_to_sat_during_semester_break_mid_recess_public_holidays_opening_hours">8:30 AM to 6:00 PM</string>
    <string name="about_fragment_mon_to_sat_during_semester_break_mid_recess_public_holidays_issue_return__hours">9:00 AM to 5:45 PM</string>
    <string name="about_fragment_open_reading_hall_heading">Open Reading Hall</string>
    <string name="about_fragment_open_reading_hall_timings">24 x 7</string>
    <string name="resources_e_resources">E-Resources</string>
    <string name="resources_daily_news_papers">Daily News Papers</string>
    <string name="resources_computing_books_by_indian_authors">Computing Books by Indian Authors</string>
    <string name="resources_computing_books_by_indian_authors_link">http://library.iiitd.edu.in/opac-tmpl/bootstrap/en/includes/cbia.html</string>
    <string name="resources_journals_magazines">Journals &amp; magazines (Hard Copy in Library)</string>
    <string name="resources_journals_magazines_link">http://library.iiitd.edu.in/opac-tmpl/bootstrap/en/includes/Subscribed%20Magazines.pdf</string>
    <string name="resources_proof_reader">Proof Reader</string>
    <string name="resources_proof_reader_link">https://support.grammarly.com/hc/en-us/categories/115000018631-Tips-Tutorials</string>
    <string name="resources_anti_plagiarism_tool_urkund">Anti Plagiarism Tool, Urkund</string>
    <string name="resources_anti_plagiarism_tool_urkund_link">http://www.urkund.com/en/</string>
    <string name="resources_video_lectures_nptel">Video Lectures, NPTEL</string>
    <string name="resources_video_lectures_nptel_link">http://library.iiitd.edu.in/nptel/</string>
    <string name="resources_citation_tools">Citation Tools</string>
    <string name="resources_mendeley">Mendeley</string>
    <string name="resources_mendeley_link">https://www.mendeley.com/guides</string>
    <string name="resources_zotero">Zotero</string>
    <string name="resources_zotero_link">https://www.zotero.org/support/quick_start_guide</string>
    <string name="resources_online_courses">Online Courses</string>
    <string name="resources_academic_earth">Academic Earth</string>
    <string name="resources_academic_earth_link">http://academicearth.org/</string>
    <string name="resources_coursera">Coursera</string>
    <string name="resources_coursera_link">https://www.coursera.org/</string>
    <string name="resources_edx">edX</string>
    <string name="resources_edx_link">https://www.edx.org/</string>
    <string name="resources_mit_opencourseware">MIT OpenCourseWare</string>
    <string name="resources_mit_opencourseware_link">https://ocw.mit.edu/index.htm</string>
    <string name="resources_nptel">NPTEL</string>
    <string name="resources_nptel_link">https://onlinecourses.nptel.ac.in/</string>
    <string name="resources_research_data_repo">Research Data Repositories</string>
    <string name="resources_re3data">re3data</string>
    <string name="resources_re3data_link">https://www.re3data.org/</string>
    <string name="resources_plos">Plos</string>
    <string name="resources_plos_link">http://journals.plos.org/plosone/s/data-availability#loc-recommended-repositories</string>
    <string name="resources_scientific">Scientific</string>
    <string name="resources_scientific_link">https://www.nature.com/sdata/policies/repositories#close</string>
    <string name="resources_simmons">Simmons</string>
    <string name="resources_simmons_link">http://oad.simmons.edu/oadwiki/Data_repositories</string>
    <string name="resources_university_of_minnesota">University of Minnesota</string>
    <string name="resources_university_of_minnesota_link">https://www.lib.umn.edu/datamanagement/datacenters</string>
    <string name="eresources">E-Resources</string>
    <string-array name="eresources_fragment_titles">
        <item>ACM Digital Library</item>
        <item>American Chemical Society (ACS)</item>
        <item>Directory of Open Access Books</item>
        <item>Directory of Open Access Journal</item>
        <item>Directory of Open Access Repositories</item>
        <item>Dissertation and Thesis (Proquest)</item>
        <item>Dissertation and Thesis (ShodhGanga-INFLIBNET)</item>
        <item>Economic and political weekly</item>
        <item>EJournal Gateway</item>
        <item>Elsevier Science Direct (CS &amp; Math)</item>
        <item>Fiction Books</item>
        <item>Institute for Studies in Industrial Development Database</item>
        <item>Internet Archive</item>
        <item>JSTOR</item>
        <item>Kindle E-Books</item>
        <item>National Digital Library</item>
        <item>National Science Digital Library</item>
        <item>Nature Online Journal</item>
        <item>Now Publishers (CSE)</item>
        <item>OAPEN</item>
        <item>O\'Reilly\'s CD Bookshelf</item>
        <item>Project GutenBerg</item>
        <item>SIAM Journals</item>
        <item>South Asia Archive</item>
        <item>Springer\'s Journals</item>
        <item>Taylor &amp; Francis Journals</item>
        <item>UCL Press</item>
        <item>Wiley-Blackwell Journals</item>
        <item>World Digital Library</item>
        <item>World E-Book Library</item>
        <item>ABI/Inform Collection - Trail Access</item>
        <item>Elsevier Science Direct Journals (CB) - Trail Access</item>
        <item>Nature Methods - Trail Access</item>
        <item>Nature Biotech - Trail Access</item>
        <item>Nature Genetics - Trail Access</item>
        <item>Scientific American - Trail Access</item>
    </string-array>
</resources>