<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_textview_e_resources"
                android:text="@string/resources_e_resources"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_textview_daily_news_papers"
                android:text="@string/resources_daily_news_papers"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_textview_computing_books_by_indian_authors"
                android:text="@string/resources_computing_books_by_indian_authors"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_textview_journal_and_magazines"
                android:text="@string/resources_journals_magazines"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_textview_proof_reader"
                android:text="@string/resources_proof_reader"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_textview_anti_plagiarism_tool"
                android:text="@string/resources_anti_plagiarism_tool_urkund"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_resource_video_lectures_nptel"
                android:text="@string/resources_video_lectures_nptel"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:paddingHorizontal="10dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_citation_tools"
                    android:text="@string/resources_citation_tools"
                    android:textColor="@color/colorPrimary"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_mendeley"
                    android:text="@string/resources_mendeley"
                    android:layout_marginHorizontal="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_zotero"
                    android:text="@string/resources_zotero"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_online_courses"
                    android:text="@string/resources_online_courses"
                    android:textColor="@color/colorPrimary"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_academic_earth"
                    android:text="@string/resources_academic_earth"
                    android:layout_marginHorizontal="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_coursera"
                    android:text="@string/resources_coursera"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_edx"
                    android:text="@string/resources_edx"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_mit"
                    android:text="@string/resources_mit_opencourseware"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_nptel"
                    android:text="@string/resources_nptel"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_research_data_repo"
                    android:text="@string/resources_research_data_repo"
                    android:textColor="@color/colorPrimary"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_re3data"
                    android:text="@string/resources_re3data"
                    android:layout_marginHorizontal="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_plos"
                    android:text="@string/resources_plos"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_scientific"
                    android:text="@string/resources_scientific"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_simmons"
                    android:text="@string/resources_simmons"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_resource_textview_univ_of_minnesota"
                    android:text="@string/resources_university_of_minnesota"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>

















